--- a/admin/src/locales/en/translation.json
+++ b/admin/src/locales/en/translation.json
@@ -79,7 +79,10 @@
       "profile": "Profile",
       "blank": "Blank",
       "mainMenu": "Main Menu",
-      "subMenu": "Sub Menu"
+      "subMenu": "Sub Menu",
+      "platformAdministration": "Administration",
+      "users": "Users",
+      "role": "Role and Permissions"
     }
   },
   "footer": {
