--- a/admin/src/locales/en/translation.json
+++ b/admin/src/locales/en/translation.json
@@ -82,7 +82,7 @@
       "subMenu": "Sub Menu",
       "platformAdministration": "Administration",
       "users": "Users",
-      "role": "Role and Permissions"
+      "role": "Roles and Permissions"
     }
   },
   "footer": {
